package tetris.lib.pieces;

import tetris.lib.blocks.Block;

public class PieceI extends Piece {
    public PieceI() {
        super(new Block[][]{{new Block('I'), new Block('I'), new Block('I')}},0,0);
    }

}
